--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "tcho",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
