--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "tcho",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.7",
